Add pagination to `GET /courts`